tests/compile_fail/state/self_superstate.stderr
error: superstate `Bottom` doesn't match any other known `moku::Substate` or `moku::TopState`
  --> tests/compile_fail/state/self_superstate.rs:15:18
   |
15 |     impl Substate<Bottom> for Bottom {}
   |                  ^
